# candle_gptj

./: .gitignore  README.md
scripts/: convert.py  model_info.txt  print.py  requirements.txt  test.py
src/: Cargo.toml
src/benches/: case1.rs
src/src/: lib.rs  main.rs
src/src/component/: mod.rs  model.rs  model_base.rs  model_burn.rs  model_candle.rs  model_tch.rs
src/src/server/: rest.rs
src/src/test/: tensor.rs
