[package]
name = "candle_gptj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
candle-core = { version = "0.3.2" }
candle-nn = { version = "0.3.2" }
candle-transformers = { version = "0.3.2" }
clap = "4.4.11"
hf-hub = { version = "0.3.2", features = ["tokio"] }
memmap2 = "0.9.0"
safetensors = "0.4.1"
serde = "1.0.193"
serde_json = "1.0.108"
tokenizers = { version = "0.15.0", features = ["hf-hub"] }
tokio = "1.34.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "case1"
harness = false
