[package]
name = "candle_gptj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.7.4", features = ["http2"] }
axum-macros = "0.4.1"
candle-core = { version = "0.3.2", features = ["cuda"] }
candle-nn = { version = "0.3.2", features = ["cuda"] }
candle-transformers = { version = "0.3.2", features = ["cuda"] }
clap = "4.4.11"
hf-hub = { version = "0.3.2", features = ["tokio"] }
itertools = "0.12.1"
memmap2 = "0.9.0"
safetensors = "0.4.1"
serde = "1.0.193"
serde_json = "1.0.108"
tch = { version = "0.14.0", features = ["clap", "memmap2"] }
tokenizers = { version = "0.15.0", features = ["hf-hub"] }
tokio = "1.34.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "case1"
harness = false

[profile.bench]
debug = true
strip = false
